language/src/main/java/com/oracle/truffle/lama/parser/LamaLanguageParser.java
// Generated from parser/LamaLanguage.g4 by ANTLR 4.13.2
package com.oracle.truffle.lama.parser;



import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue", "this-escape"})
public class LamaLanguageParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		WHITESPACE=1, NOP=2, IF=3, THEN=4, ELSE=5, ELIF=6, FI=7, CASE=8, OF=9, 
		ESAC=10, WHILE=11, DO=12, OD=13, FOR=14, LET=15, IN=16, VAR=17, FUN=18, 
		TRUE=19, FALSE=20, STRING=21, CHARACTER=22, INTEGER=23, LIDENT=24, UIDENT=25, 
		OP_ASSN1=26, OP_ASSN2=27, OP_OR=28, OP_AND=29, OP_CMP=30, OP_ADD=31, OP_MUL=32, 
		LPAR=33, RPAR=34, LBRKT=35, RBRKT=36, LCB=37, RCB=38, COMMA=39, CLN=40, 
		SCLN=41, SQUOTE=42, DQUOTE=43, DOT=44, ALIAS=45, RARROW=46, VBAR=47, ASSERT_VAL=48, 
		ASSERT_FUN=49, ASSERT_STR=50;
	public static final int
		RULE_lamaLanguage = 0, RULE_scopeExp = 1, RULE_oneVarDef = 2, RULE_definition = 3, 
		RULE_lidentList0 = 4, RULE_expList0 = 5, RULE_expList = 6, RULE_exp = 7, 
		RULE_basic = 8, RULE_basicCons = 9, RULE_basicOr = 10, RULE_basicAnd = 11, 
		RULE_basicCmp = 12, RULE_basicAdd = 13, RULE_basicMul = 14, RULE_basicUnary = 15, 
		RULE_postfix = 16, RULE_primary = 17, RULE_sexp = 18, RULE_array = 19, 
		RULE_list = 20, RULE_literal = 21, RULE_strlit = 22, RULE_chrlit = 23, 
		RULE_intlit = 24, RULE_blit = 25, RULE_parentheses = 26, RULE_nop = 27, 
		RULE_whileLoop = 28, RULE_doWhileLoop = 29, RULE_forLoop = 30, RULE_ifStmt = 31, 
		RULE_caseStmt = 32, RULE_caseOption = 33, RULE_lambda = 34, RULE_pattern = 35, 
		RULE_nonConsPattern = 36, RULE_patternList0 = 37, RULE_patternList = 38, 
		RULE_parenthesesPattern = 39, RULE_literalPattern = 40, RULE_varPattern = 41, 
		RULE_sexpPattern = 42, RULE_arrayPattern = 43, RULE_listPattern = 44, 
		RULE_assertFunPattern = 45, RULE_assertValPattern = 46, RULE_assertStrPattern = 47;
	private static String[] makeRuleNames() {
		return new String[] {
			"lamaLanguage", "scopeExp", "oneVarDef", "definition", "lidentList0", 
			"expList0", "expList", "exp", "basic", "basicCons", "basicOr", "basicAnd", 
			"basicCmp", "basicAdd", "basicMul", "basicUnary", "postfix", "primary", 
			"sexp", "array", "list", "literal", "strlit", "chrlit", "intlit", "blit", 
			"parentheses", "nop", "whileLoop", "doWhileLoop", "forLoop", "ifStmt", 
			"caseStmt", "caseOption", "lambda", "pattern", "nonConsPattern", "patternList0", 
			"patternList", "parenthesesPattern", "literalPattern", "varPattern", 
			"sexpPattern", "arrayPattern", "listPattern", "assertFunPattern", "assertValPattern", 
			"assertStrPattern"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, null, "'skip'", "'if'", "'then'", "'else'", "'elif'", "'fi'", "'case'", 
			"'of'", "'esac'", "'while'", "'do'", "'od'", "'for'", "'let'", "'in'", 
			"'var'", "'fun'", "'true'", "'false'", null, null, null, null, null, 
			"'='", "':='", "'!!'", "'&&'", null, null, null, "'('", "')'", "'['", 
			"']'", "'{'", "'}'", "','", "':'", "';'", "'''", "'\"'", "'.'", "'@'", 
			"'->'", "'|'", "'#val'", "'#fun'", "'#str'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "WHITESPACE", "NOP", "IF", "THEN", "ELSE", "ELIF", "FI", "CASE", 
			"OF", "ESAC", "WHILE", "DO", "OD", "FOR", "LET", "IN", "VAR", "FUN", 
			"TRUE", "FALSE", "STRING", "CHARACTER", "INTEGER", "LIDENT", "UIDENT", 
			"OP_ASSN1", "OP_ASSN2", "OP_OR", "OP_AND", "OP_CMP", "OP_ADD", "OP_MUL", 
			"LPAR", "RPAR", "LBRKT", "RBRKT", "LCB", "RCB", "COMMA", "CLN", "SCLN", 
			"SQUOTE", "DQUOTE", "DOT", "ALIAS", "RARROW", "VBAR", "ASSERT_VAL", "ASSERT_FUN", 
			"ASSERT_STR"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "LamaLanguage.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public LamaLanguageParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class LamaLanguageContext extends ParserRuleContext {
		public ScopeExpContext scopeExp() {
			return getRuleContext(ScopeExpContext.class,0);
		}
		public TerminalNode EOF() { return getToken(LamaLanguageParser.EOF, 0); }
		public LamaLanguageContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_lamaLanguage; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LamaLanguageVisitor ) return ((LamaLanguageVisitor<? extends T>)visitor).visitLamaLanguage(this);
			else return visitor.visitChildren(this);
		}
	}

	public final LamaLanguageContext lamaLanguage() throws RecognitionException {
		LamaLanguageContext _localctx = new LamaLanguageContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_lamaLanguage);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(96);
			scopeExp();
			setState(97);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ScopeExpContext extends ParserRuleContext {
		public ExpContext body;
		public List<DefinitionContext> definition() {
			return getRuleContexts(DefinitionContext.class);
		}
		public DefinitionContext definition(int i) {
			return getRuleContext(DefinitionContext.class,i);
		}
		public ExpContext exp() {
			return getRuleContext(ExpContext.class,0);
		}
		public ScopeExpContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_scopeExp; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LamaLanguageVisitor ) return ((LamaLanguageVisitor<? extends T>)visitor).visitScopeExp(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ScopeExpContext scopeExp() throws RecognitionException {
		ScopeExpContext _localctx = new ScopeExpContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_scopeExp);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(102);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,0,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(99);
					definition();
					}
					} 
				}
				setState(104);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,0,_ctx);
			}
			setState(106);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
			case 1:
				{
				setState(105);
				((ScopeExpContext)_localctx).body = exp();
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class OneVarDefContext extends ParserRuleContext {
		public Token name;
		public BasicContext assignedValue;
		public TerminalNode LIDENT() { return getToken(LamaLanguageParser.LIDENT, 0); }
		public TerminalNode OP_ASSN1() { return getToken(LamaLanguageParser.OP_ASSN1, 0); }
		public BasicContext basic() {
			return getRuleContext(BasicContext.class,0);
		}
		public OneVarDefContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_oneVarDef; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LamaLanguageVisitor ) return ((LamaLanguageVisitor<? extends T>)visitor).visitOneVarDef(this);
			else return visitor.visitChildren(this);
		}
	}

	public final OneVarDefContext oneVarDef() throws RecognitionException {
		OneVarDefContext _localctx = new OneVarDefContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_oneVarDef);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(108);
			((OneVarDefContext)_localctx).name = match(LIDENT);
			setState(111);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==OP_ASSN1) {
				{
				setState(109);
				match(OP_ASSN1);
				setState(110);
				((OneVarDefContext)_localctx).assignedValue = basic();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class DefinitionContext extends ParserRuleContext {
		public DefinitionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_definition; }
	 
		public DefinitionContext() { }
		public void copyFrom(DefinitionContext ctx) {
			super.copyFrom(ctx);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class FunDefinitionContext extends DefinitionContext {
		public Token name;
		public LidentList0Context args;
		public ScopeExpContext body;
		public TerminalNode FUN() { return getToken(LamaLanguageParser.FUN, 0); }
		public TerminalNode LPAR() { return getToken(LamaLanguageParser.LPAR, 0); }
		public TerminalNode RPAR() { return getToken(LamaLanguageParser.RPAR, 0); }
		public TerminalNode LCB() { return getToken(LamaLanguageParser.LCB, 0); }
		public TerminalNode RCB() { return getToken(LamaLanguageParser.RCB, 0); }
		public TerminalNode LIDENT() { return getToken(LamaLanguageParser.LIDENT, 0); }
		public LidentList0Context lidentList0() {
			return getRuleContext(LidentList0Context.class,0);
		}
		public ScopeExpContext scopeExp() {
			return getRuleContext(ScopeExpContext.class,0);
		}
		public FunDefinitionContext(DefinitionContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LamaLanguageVisitor ) return ((LamaLanguageVisitor<? extends T>)visitor).visitFunDefinition(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class VarDefinitionContext extends DefinitionContext {
		public OneVarDefContext firstdef;
		public TerminalNode VAR() { return getToken(LamaLanguageParser.VAR, 0); }
		public TerminalNode SCLN() { return getToken(LamaLanguageParser.SCLN, 0); }
		public List<OneVarDefContext> oneVarDef() {
			return getRuleContexts(OneVarDefContext.class);
		}
		public OneVarDefContext oneVarDef(int i) {
			return getRuleContext(OneVarDefContext.class,i);
		}
		public List<TerminalNode> COMMA() { return getTokens(LamaLanguageParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(LamaLanguageParser.COMMA, i);
		}
		public VarDefinitionContext(DefinitionContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LamaLanguageVisitor ) return ((LamaLanguageVisitor<? extends T>)visitor).visitVarDefinition(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DefinitionContext definition() throws RecognitionException {
		DefinitionContext _localctx = new DefinitionContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_definition);
		int _la;
		try {
			setState(133);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case VAR:
				_localctx = new VarDefinitionContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(113);
				match(VAR);
				setState(114);
				((VarDefinitionContext)_localctx).firstdef = oneVarDef();
				setState(119);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==COMMA) {
					{
					{
					setState(115);
					match(COMMA);
					setState(116);
					oneVarDef();
					}
					}
					setState(121);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(122);
				match(SCLN);
				}
				break;
			case FUN:
				_localctx = new FunDefinitionContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(124);
				match(FUN);
				setState(125);
				((FunDefinitionContext)_localctx).name = match(LIDENT);
				setState(126);
				match(LPAR);
				setState(127);
				((FunDefinitionContext)_localctx).args = lidentList0();
				setState(128);
				match(RPAR);
				setState(129);
				match(LCB);
				setState(130);
				((FunDefinitionContext)_localctx).body = scopeExp();
				setState(131);
				match(RCB);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class LidentList0Context extends ParserRuleContext {
		public Token hd;
		public List<TerminalNode> LIDENT() { return getTokens(LamaLanguageParser.LIDENT); }
		public TerminalNode LIDENT(int i) {
			return getToken(LamaLanguageParser.LIDENT, i);
		}
		public List<TerminalNode> COMMA() { return getTokens(LamaLanguageParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(LamaLanguageParser.COMMA, i);
		}
		public LidentList0Context(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_lidentList0; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LamaLanguageVisitor ) return ((LamaLanguageVisitor<? extends T>)visitor).visitLidentList0(this);
			else return visitor.visitChildren(this);
		}
	}

	public final LidentList0Context lidentList0() throws RecognitionException {
		LidentList0Context _localctx = new LidentList0Context(_ctx, getState());
		enterRule(_localctx, 8, RULE_lidentList0);
		int _la;
		try {
			setState(144);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case RPAR:
				enterOuterAlt(_localctx, 1);
				{
				}
				break;
			case LIDENT:
				enterOuterAlt(_localctx, 2);
				{
				setState(136);
				((LidentList0Context)_localctx).hd = match(LIDENT);
				setState(141);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==COMMA) {
					{
					{
					setState(137);
					match(COMMA);
					setState(138);
					match(LIDENT);
					}
					}
					setState(143);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ExpList0Context extends ParserRuleContext {
		public ExpContext hd;
		public List<ExpContext> exp() {
			return getRuleContexts(ExpContext.class);
		}
		public ExpContext exp(int i) {
			return getRuleContext(ExpContext.class,i);
		}
		public List<TerminalNode> COMMA() { return getTokens(LamaLanguageParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(LamaLanguageParser.COMMA, i);
		}
		public ExpList0Context(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expList0; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LamaLanguageVisitor ) return ((LamaLanguageVisitor<? extends T>)visitor).visitExpList0(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ExpList0Context expList0() throws RecognitionException {
		ExpList0Context _localctx = new ExpList0Context(_ctx, getState());
		enterRule(_localctx, 10, RULE_expList0);
		int _la;
		try {
			setState(155);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case RPAR:
			case RBRKT:
			case RCB:
				enterOuterAlt(_localctx, 1);
				{
				}
				break;
			case NOP:
			case IF:
			case CASE:
			case WHILE:
			case DO:
			case FOR:
			case LET:
			case FUN:
			case TRUE:
			case FALSE:
			case STRING:
			case CHARACTER:
			case INTEGER:
			case LIDENT:
			case UIDENT:
			case OP_ADD:
			case LPAR:
			case LBRKT:
			case LCB:
				enterOuterAlt(_localctx, 2);
				{
				setState(147);
				((ExpList0Context)_localctx).hd = exp();
				setState(152);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==COMMA) {
					{
					{
					setState(148);
					match(COMMA);
					setState(149);
					exp();
					}
					}
					setState(154);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ExpListContext extends ParserRuleContext {
		public ExpContext hd;
		public List<ExpContext> exp() {
			return getRuleContexts(ExpContext.class);
		}
		public ExpContext exp(int i) {
			return getRuleContext(ExpContext.class,i);
		}
		public List<TerminalNode> COMMA() { return getTokens(LamaLanguageParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(LamaLanguageParser.COMMA, i);
		}
		public ExpListContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expList; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LamaLanguageVisitor ) return ((LamaLanguageVisitor<? extends T>)visitor).visitExpList(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ExpListContext expList() throws RecognitionException {
		ExpListContext _localctx = new ExpListContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_expList);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(157);
			((ExpListContext)_localctx).hd = exp();
			setState(162);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==COMMA) {
				{
				{
				setState(158);
				match(COMMA);
				setState(159);
				exp();
				}
				}
				setState(164);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ExpContext extends ParserRuleContext {
		public ExpContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_exp; }
	 
		public ExpContext() { }
		public void copyFrom(ExpContext ctx) {
			super.copyFrom(ctx);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class LetExpContext extends ExpContext {
		public ExpContext r;
		public TerminalNode LET() { return getToken(LamaLanguageParser.LET, 0); }
		public PatternContext pattern() {
			return getRuleContext(PatternContext.class,0);
		}
		public TerminalNode OP_ASSN1() { return getToken(LamaLanguageParser.OP_ASSN1, 0); }
		public BasicContext basic() {
			return getRuleContext(BasicContext.class,0);
		}
		public TerminalNode IN() { return getToken(LamaLanguageParser.IN, 0); }
		public ExpContext exp() {
			return getRuleContext(ExpContext.class,0);
		}
		public LetExpContext(ExpContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LamaLanguageVisitor ) return ((LamaLanguageVisitor<? extends T>)visitor).visitLetExp(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class SingleExpContext extends ExpContext {
		public BasicContext basic() {
			return getRuleContext(BasicContext.class,0);
		}
		public SingleExpContext(ExpContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LamaLanguageVisitor ) return ((LamaLanguageVisitor<? extends T>)visitor).visitSingleExp(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class SeqExpContext extends ExpContext {
		public BasicContext l;
		public ExpContext r;
		public TerminalNode SCLN() { return getToken(LamaLanguageParser.SCLN, 0); }
		public BasicContext basic() {
			return getRuleContext(BasicContext.class,0);
		}
		public ExpContext exp() {
			return getRuleContext(ExpContext.class,0);
		}
		public SeqExpContext(ExpContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LamaLanguageVisitor ) return ((LamaLanguageVisitor<? extends T>)visitor).visitSeqExp(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ExpContext exp() throws RecognitionException {
		ExpContext _localctx = new ExpContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_exp);
		try {
			setState(177);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,10,_ctx) ) {
			case 1:
				_localctx = new SingleExpContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(165);
				basic();
				}
				break;
			case 2:
				_localctx = new SeqExpContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(166);
				((SeqExpContext)_localctx).l = basic();
				setState(167);
				match(SCLN);
				setState(168);
				((SeqExpContext)_localctx).r = exp();
				}
				break;
			case 3:
				_localctx = new LetExpContext(_localctx);
				enterOuterAlt(_localctx, 3);
				{
				setState(170);
				match(LET);
				setState(171);
				pattern();
				setState(172);
				match(OP_ASSN1);
				setState(173);
				basic();
				setState(174);
				match(IN);
				setState(175);
				((LetExpContext)_localctx).r = exp();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
